--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
 		"noImplicitAny": true,
 		"module": "commonjs",
 		"target": "es2015",
-		"declaration": true,
+		"declaration": false,
 		"allowSyntheticDefaultImports": true,
 		"esModuleInterop": true,
 		"lib": [ "es2019", "DOM" ],
