--- a/.github/workflows/github-deploy-pages.yml
+++ b/.github/workflows/github-deploy-pages.yml
@@ -22,10 +22,13 @@ jobs:
       - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
         run: |
           npm install
-          npm run build.prod
+          npm run build --if-present
+          echo skip npm run coverage
+          echo skip  ./node_modules/.bin/codecov
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.4
         with:
           branch: gh-pages # The branch the action should deploy to.
           folder: dist # The folder the action should deploy.
+          single-commit: true
