--- a/package.json
+++ b/package.json
@@ -2,49 +2,43 @@
 	"name": "archimate-diagram",
 	"version": "0.0.1",
 	"description": "View Archi diagrams",
-	"main": "index.js",
-	"scripts": {
-		"start": "webpack serve --port 9000 --mode=development",
-		"build": "webpack --config webpack.config.js --mode development",
-		"build.prod": "webpack --config webpack.config.js --mode production",
-		"build.esnext": "npm run build:types && npm run build:js",
-		"build:types": "tsc --emitDeclarationOnly",
-		"build:js": "babel src --out-dir dist --extensions \".ts\" --source-maps inline",
-		"build.all": "npm run build.prod && npm run build.esnext",
-		"test": "karma start karma.config.js"
-	},
-	"keywords": [
-		"webpack",
-		"webpack5",
-		"typescript"
-	],
-	"author": "Juri Strumpflohner",
-	"license": "ISC",
-	"devDependencies": {
-		"@babel/cli": "^7.14.5",
-		"@babel/core": "^7.14.6",
-		"@babel/plugin-proposal-class-properties": "^7.14.5",
-		"@babel/plugin-proposal-object-rest-spread": "^7.14.7",
-		"@babel/preset-env": "^7.14.7",
-		"@babel/preset-typescript": "^7.14.5",
-		"@types/jasmine": "3.7.7",
-		"@types/node": "15.12.4",
-		"html-webpack-plugin": "^5.3.2",
-		"jasmine-core": "3.7.1",
-		"karma": "^6.3.4",
-		"karma-chrome-launcher": "^3.1.0",
-		"karma-jasmine": "^4.0.1",
-		"karma-webpack": "^5.0.0",
-		"source-map-loader": "3.0.0",
-		"ts-loader": "^9.2.3",
-		"tslint": "5.20.1",
-		"tslint-loader": "3.6.0",
-		"typescript": "^4.3.4",
-		"webpack": "^5.40.0",
-		"webpack-cli": "^4.7.2",
-		"webpack-dev-server": "^4.0.0-beta.3"
+  "keywords": [
+    "archimate",
+    "diagram"
+  ],
+  "devDependencies": {
+    "@types/jest": "^26.0.23",
+    "@typescript-eslint/eslint-plugin": "^4.28.1",
+    "@typescript-eslint/parser": "^4.28.1",
+    "@webpack-cli/init": "^1.0.3",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "codecov": "^3.8.2",
+    "copy-webpack-plugin": "^9.0.1",
+    "cross-env": "^7.0.3",
+    "css-loader": "^5.2.6",
+    "eslint": "^7.29.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.3.2",
+    "jest": "^27.0.6",
+    "mini-css-extract-plugin": "^2.0.0",
+    "node-sass": "^6.0.1",
+    "sass-loader": "^12.1.0",
+    "ts-jest": "^27.0.3",
+    "ts-loader": "^9.2.3",
+    "typescript": "^4.3.4",
+    "webpack": "^5.41.1",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^4.0.0-beta.3",
+    "webpack-merge": "^5.8.0"
 	},
 	"dependencies": {
 		"jszip": "^3.6.0"
-	}
+	},
+  "scripts": {
+    "start": "cross-env NODE_ENV=development webpack serve",
+    "coverage": "jest --collect-coverage",
+    "test": "jest --watchAll",
+    "build": "cross-env NODE_ENV=production webpack"
+  }
 }
