--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,11 @@
             "request": "launch",
             "name": "Open index.html",
             "url": "http://127.0.0.1:4200/index.html#1",
-            "webRoot": "${workspaceFolder}/src"
+            "webRoot": "${workspaceFolder}/src",
+            "sourceMapPathOverrides": {
+              "webpack:///./*": "${workspaceFolder}/src/*",
+              "webpack:///src/*": "${workspaceFolder}/src/*"
+            }
         }
     ]
 }
