--- a/package.json
+++ b/package.json
@@ -33,7 +33,11 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "jszip": "^3.6.0"
+    "htm": "^3.1.0",
+    "jszip": "^3.6.0",
+    "preact": "^10.5.14",
+    "sequency": "^0.19.2",
+    "split-grid": "^1.0.11"
   },
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack serve",
