--- a/package.json
+++ b/package.json
@@ -33,8 +33,13 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "esbuild": "^0.14.38",
+    "esbuild-plugin-sass": "^1.0.1",
+    "esbuild-sass-plugin": "^2.2.6",
     "jszip": "^3.6.0",
     "preact": "^10.5.14",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "sequency": "^0.19.2",
     "split-grid": "^1.0.11"
   },
