--- a/package.json
+++ b/package.json
@@ -7,30 +7,25 @@
     "diagram"
   ],
   "devDependencies": {
+    "@preact/preset-vite": "^2.2.0",
     "@types/jest": "^26.0.23",
     "@typescript-eslint/eslint-plugin": "^4.28.1",
     "@typescript-eslint/parser": "^4.28.1",
-    "@webpack-cli/init": "^1.0.3",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "clean-webpack-plugin": "^3.0.0",
     "codecov": "^3.8.2",
-    "copy-webpack-plugin": "^9.0.1",
     "cross-env": "^7.0.3",
     "css-loader": "^5.2.6",
     "eslint": "^7.29.0",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.3.2",
     "jest": "^27.0.6",
     "mini-css-extract-plugin": "^2.0.0",
-    "node-sass": "^6.0.1",
-    "sass-loader": "^12.1.0",
+    "node-sass": "^7.0.1",
+    "sass": "^1.50.1",
+    "sass-loader": "^12.6.0",
     "ts-jest": "^27.0.3",
     "ts-loader": "^9.2.3",
     "typescript": "^4.3.4",
-    "webpack": "^5.41.1",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^4.0.0-beta.3",
-    "webpack-merge": "^5.8.0"
+    "vite": "^2.9.5"
   },
   "dependencies": {
     "jszip": "^3.6.0",
@@ -39,9 +34,8 @@
     "split-grid": "^1.0.11"
   },
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack serve",
-    "coverage": "jest --collect-coverage",
-    "test": "jest --watchAll",
-    "build": "cross-env NODE_ENV=production webpack"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   }
 }
