--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "diagram"
   ],
   "devDependencies": {
+    "@molgenis/vite-plugin-inline": "^1.0.8",
     "@preact/preset-vite": "^2.2.0",
     "@types/jest": "^26.0.23",
     "@typescript-eslint/eslint-plugin": "^4.28.1",
