--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
 		"outDir": "./dist/",
 		"sourceMap": true,
 		"noImplicitAny": true,
-		"module": "commonjs",
+		"module": "ES2020",
+    "moduleResolution": "Node",
 		"target": "ES2017",
 		"declaration": false,
 		"allowSyntheticDefaultImports": true,
