--- a/.editorconfig
+++ b/.editorconfig
@@ -8,7 +8,7 @@ insert_final_newline = true
 indent_style = space
 indent_size = 2
 
-[*.{js,ts,json}]
+[*.{js,ts,tsx,json}]
 indent_style = space
 indent_size = 2
 
