--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "vite": "^3.1.0"
   },
   "dependencies": {
+    "fast-deep-equal": "^3.1.3",
     "jszip": "^3.10.1",
     "preact": "^10.10.6",
     "sequency": "^0.20.0",
