--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ts-jest": "^29.0.0",
     "ts-loader": "^9.3.1",
     "typescript": "^4.8.3",
+    "typescript-plugin-css-modules": "^3.4.0",
     "vite": "^3.1.0"
   },
   "dependencies": {
