--- a/.github/workflows/github-deploy-pages.yml
+++ b/.github/workflows/github-deploy-pages.yml
@@ -11,7 +11,11 @@ jobs:
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
       - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
       - name: Check out repository code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '16'
+          cache: 'npm'
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
       - name: List files in the repository
@@ -20,11 +24,10 @@ jobs:
       - run: echo "🍏 This job's status is ${{ job.status }}."
 
       - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
-        run: |
-          npm install
-          npm run build --if-present
-          echo skip npm run coverage
-          echo skip  ./node_modules/.bin/codecov
+        run: npm install
+      - run: npm run build --if-present
+        #  echo skip npm run coverage
+        #  echo skip  ./node_modules/.bin/codecov
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.4
