--- a/package.json
+++ b/package.json
@@ -8,31 +8,33 @@
   ],
   "devDependencies": {
     "@preact/preset-vite": "^2.4.0",
-    "@types/jest": "^29.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.36.2",
-    "@typescript-eslint/parser": "^5.36.2",
+    "@types/jest": "^29.1.2",
+    "@typescript-eslint/eslint-plugin": "^5.40.0",
+    "@typescript-eslint/parser": "^5.40.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
-    "eslint": "^8.23.0",
+    "eslint": "^8.25.0",
     "file-loader": "^6.2.0",
-    "jest": "^29.0.2",
+    "jest": "^29.2.0",
     "mini-css-extract-plugin": "^2.6.1",
     "node-sass": "^7.0.3",
-    "sass": "^1.54.5",
-    "sass-loader": "^13.0.2",
-    "ts-jest": "^29.0.0",
-    "ts-loader": "^9.3.1",
-    "typescript": "^4.8.3",
-    "typescript-plugin-css-modules": "^3.4.0",
-    "vite": "^3.1.0"
+    "sass": "^1.55.0",
+    "sass-loader": "^13.1.0",
+    "ts-jest": "^29.0.3",
+    "ts-loader": "^9.4.1",
+    "typescript": "^4.8.4",
+    "typescript-plugin-css-modules": "^2.8.0",
+    "vite": "^3.1.8"
   },
   "dependencies": {
+    "@types/uuid": "^8.3.4",
     "fast-deep-equal": "^3.1.3",
     "jszip": "^3.10.1",
-    "preact": "^10.10.6",
+    "preact": "^10.11.1",
     "sequency": "^0.20.0",
-    "split-grid": "^1.0.11"
+    "split-grid": "^1.0.11",
+    "uuid": "^9.0.0"
   },
   "scripts": {
     "dev": "vite",
